<resources>
    <string name="app_name">MyTaxi</string>
    <string name="splash_title">打车出行</string>
    <string name="splash_message">美好一天，平安出行 </string>
    <string name="tv_login">登录</string>
    <string name="et_phone_hint">请输入手机号码</string>
    <string name="btn_next">下一步</string>
    <string name="template_text">正在向%s发送短信验证码</string>
    <string name="count_format_text">秒后重新发送</string>
    <string name="error_server">服务器繁忙</string>
    <string name="input_pw_text">输入密码</string>
    <string name="pw_hint_text">请输入密码</string>
    <string name="pw_hint_text_again">请再次输入密码</string>
    <string name="btn_confirm">确认</string>
    <string name="pw_not_null">密码不能为空</string>
    <string name="pw_confirm_diff">两次输入密码不一样</string>
    <string name="auto_login">注册成功,正在为您自动登录</string>
    <string name="login_success">注册成功,正在为您自动登录</string>
    <string name="login_suc">登录成功</string>
    <string name="server_busy">服务器繁忙</string>
    <string name="password_error">密码错误</string>



</resources>
